--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,3 +13,7 @@
 .icono-mdi {
   font-size: 20px; /* Ajusta el tamaño según tus necesidades */
 }
+
+i:hover {
+  cursor: pointer; /* Cambiar el cursor a la forma de una mano */
+}
